fix spacing on help offered by

--- a/app/assets/stylesheets/dreams/grid.css.scss
+++ b/app/assets/stylesheets/dreams/grid.css.scss
@@ -48,7 +48,7 @@
 
 .owner-of-dream-messages-holder {
   .help-offered-by {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 }
 
